// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assertEachWith > with message="user-provided message" > should reject invalid values 1`] = `
[AggregateError: user-provided message
	invalid index 1: "2" is not a number
	invalid index 3: "4" is not a number]
`;

exports[`assertEachWith > with message=undefined > should reject invalid values 1`] = `
[AggregateError: assertion failed on 2 item(s)
	invalid index 1: "2" is not a number
	invalid index 3: "4" is not a number]
`;
